force-app/main/default/objects/Offsite_Template_Industry__c/Offsite_Template_Industry__c.object-meta.xml
<CustomObject>
    <label>Offsite Template Industry</label>
    <nameField>
        <displayFormat>OT.Industry-{00000}</displayFormat>
        <label>Offsite Template Industry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offsite Template Industries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>