force-app/main/default/objects/Offsite_Template_Industry__c/fields/Archive_Formula__c.field-meta.xml
<CustomField>
    <fullName>Archive_Formula__c</fullName>
    <description>FOR COGNOS</description>
    <formula>IF(Archive__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archive Formula</label>
    <type>Text</type>
</CustomField>