force-app/main/default/objects/Offsite_Template_Industry__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus</label>
    <type>Checkbox</type>
</CustomField>