force-app/main/default/objects/Offsite_Template_Industry__c/fields/Focus_Formula__c.field-meta.xml
<CustomField>
    <fullName>Focus_Formula__c</fullName>
    <description>FOR COGNOS</description>
    <formula>IF(Focus__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focus Formula</label>
    <type>Text</type>
</CustomField>