force-app/main/default/objects/Offsite_Template_Industry__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Offsite Template Industries</relationshipLabel>
    <relationshipName>Offsite_Template_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>