force-app/main/default/objects/Offsite_Template_Industry__c/fields/Meeting__c.field-meta.xml
<CustomField>
    <fullName>Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting</label>
    <type>Checkbox</type>
</CustomField>