force-app/main/default/objects/Offsite_Template_Industry__c/fields/Meeting_Formula__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Formula__c</fullName>
    <description>FOR COGNOS</description>
    <formula>IF(Meeting__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Formula</label>
    <type>Text</type>
</CustomField>