force-app/main/default/objects/Offsite_Template_Industry__c/fields/Offsite_Template__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offsite Template</label>
    <referenceTo>Offsite_Template__c</referenceTo>
    <relationshipLabel>Offsite Template Industries</relationshipLabel>
    <relationshipName>Offsite_Template_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>